tests/exceptions/output/others/syntaxerror_without_traceback.txt

  File "<string>", line 1
    foo =
         ^
[31m[1mSyntaxError[0m:[1m invalid syntax[0m

  File "<string>", line 1
    foo =
         ^
[31m[1mSyntaxError[0m:[1m invalid syntax[0m

  File "<string>", line 1
    foo =
         ^
[31m[1mSyntaxError[0m:[1m invalid syntax[0m

  File "<string>", line 1
    foo =
         ^
[31m[1mSyntaxError[0m:[1m invalid syntax[0m
